--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,6 +9,8 @@ updates:
     directory: '/' # Location of package manifests
     schedule:
       interval: 'weekly'
+    commit-message:
+      prefix: "🤖"
     groups:
       auto-dependencies:
         patterns:
